# DerpCAM

./: DerpCAM  GcodePreview  README.md  check.py  gcodegen.py  geom.py  get-hsm.sh  milling_tool.py  process.py  propsheet.py  ptext.py  requirements.txt  setup.cfg  toolpath.py  view.py
api_examples/: example_common.py  halfbracket.py  spiral.py  thread_mill.py
cam/: contour.py  dogbone.py  peel.py  pocket.py
examples/: dxf.py  dxf2.py  example_common.py  halfbracket.py  mold.py  nema24.py  spiral.py  spiral_pocket.py  textemboss.py  textpath.py
gui/: canvas.py  cutter_mgr.py  dock.py  inventory.py  main_win.py  model.py  propsheet.py  settings.py
src/DerpCAM/cam/: contour.py  dogbone.py  gcodegen.py  gcodeops.py  milling_tool.py  pattern_fill.py  peel.py  pocket.py  ptext.py  shapes.py  toolpath.py  vcarve.py  wall_profile.py
src/DerpCAM/common/: geom.py  gparser.py  guiutils.py  testutils.py  view.py
src/DerpCAM/gui/: about.py  canvas.py  common_model.py  cutter_mgr.py  dock.py  draw.py  drawing_model.py  editors.py  inventory.py  main_win.py  model.py  propsheet.py  settings.py  tool_model.py  wall_profile_mgr.py  worker.py  workpiece_model.py
tests/: test_cutter_mgr.py  test_document.py  test_gcode.py  test_geom.py  test_inventory.py  test_settings.py
