[metadata]
name = DerpCAM
version = 0.0.1
author = Krzysztof Foltman
author_email = wdev@foltman.com
description = Hobby grade CAM package for CNC routers/mills
keywords = CAM CNC toolpath machining
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/kfoltman/DerpCAM/
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = 
    pyclipr
    shapely
    pyvoronoi

[options.packages.find]
where = src
